@@ -5,7 +5,7 @@ Title: Algorithms for Quantitative Pedology
 Author: Dylan Beaudette <debeaudette@ucdavis.edu>, Pierre Roudier <roudierp@landcareresearch.co.nz>
 Maintainer: Dylan Beaudette <debeaudette@ucdavis.edu>, Pierre Roudier <roudierp@landcareresearch.co.nz>
 Depends: R (>= 2.9.0), plyr, reshape, lattice, cluster, sp, Hmisc
-Suggests: RColorBrewer, colorspace, maptools, rgdal, foreign, MASS, ape, plotrix, foreach, doMC, SSOAP, XML, RCurl, RODBC
+Suggests: RColorBrewer, colorspace, maptools, rgdal, foreign, MASS, ape, plotrix, foreach, doSMP, SSOAP, XML, RCurl, RODBC
 Description: A collection of algorithms related to modeling of soil resources, soil classification, soil profile aggregation, and visualization. 
 License: GPL (>= 2)
 Packaged: 2011-08-31 00:00:00 UTC; dylan
